drawing-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: drawing-service-service
spec:
  selector:
    app: drawing-service
  ports:
  - name: http
    port: 80
    targetPort: 5001
